Convert some SCSS files to global JSS

--- a/packages/lesswrong/styles/_variables.scss
+++ b/packages/lesswrong/styles/_variables.scss
@@ -13,3 +13,5 @@ $border: 1px solid $light-border;
   display: flex;
   align-items: center;
 }
+
+$comments-font: Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif;
