--- a/packages/lesswrong/styles/_forms.scss
+++ b/packages/lesswrong/styles/_forms.scss
@@ -193,3 +193,10 @@ div.ReactTags__suggestions mark{
 .form-component-AlignmentCheckbox {
   position:relative;
 }
+
+
+@include max-small() {
+  .primary-form-submit-button {
+    float: left;
+  }
+}
