Eliminate _variables.scss

--- a/packages/lesswrong/styles/_forms.scss
+++ b/packages/lesswrong/styles/_forms.scss
@@ -34,7 +34,7 @@ select.form-control{
   padding: 5px;
   bottom: 5px;
   right: 5px;
-  color: $light-grey;
+  color: #ddd;
   font-size: 80%;
   &.danger{
     color: #EF1642;
