--- a/packages/lesswrong/styles/_admin.scss
+++ b/packages/lesswrong/styles/_admin.scss
@@ -1,3 +1,5 @@
+$comments-font: Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif;
+
 .admin-home-layout {
   width:920px;
   margin:auto;
